cmake_minimum_required(VERSION 3.22)
project(Muha_Alecsandra_314)

set(CMAKE_CXX_STANDARD 14)

add_executable(Muha_Alecsandra_314 RepoforFriends.h Tests.cpp Tests.h RepoForMessage.h RepoForMessage.cpp MultiDict.h main.cpp User.h User.cpp Message.cpp Message.h Friendship.cpp Friendship.h Node.h RepoForUser.h RepoForUser.cpp List.h Network.cpp Network.h Console.cpp Console.h )
